--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "tig/buckaroo",
-    "description": "TIG Magento 2 Buckaroo extension",
+    "name": "buckaroo/magento2",
+    "description": "Buckaroo Magento 2 extension",
     "require": {
         "php": "~5.6.0|~7.0.0|~7.1.0|~7.2.0|~7.3.0",
         "magento/module-payment": "100.1.*|100.2.*|100.3.*",
@@ -10,19 +10,19 @@
     "license": "CC-BY-NC-ND-3.0",
     "authors": [
         {
-            "name": "TIG",
-            "email": "servicedesk@tig.nl",
-            "homepage": "http://tig.nl"
+            "name": "Buckaroo",
+            "email": "support@buckaroo.nl",
+            "homepage": "https://www.buckaroo.nl"
         }
     ],
     "support": {
-        "email": "sd@tig.nl",
-        "issues": "http://servicedesk.tig.nl/hc/nl/requests/new",
-        "wiki": "http://servicedesk.tig.nl/hc/nl/sections/203522128-Buckaroo-Magento-2-artikelen",
-        "docs": "http://servicedesk.tig.nl/hc/nl/articles/218518187-EN-Buckaroo-Magento-2-Installation-and-Configuration-manual"
+        "email": "support@buckaroo.nl",
+        "issues": "https://support.buckaroo.nl/contact",
+        "wiki": "https://support.buckaroo.nl",
+        "docs": "https://support.buckaroo.nl"
     },
-    "homepage": "https://store.tig.nl/buckaroo.html",
-    "version" : "v1.14.0",
+    "homepage": "https://www.buckaroo.nl",
+    "version" : "v1.15.0",
     "minimum-stability": "stable",
     "autoload": {
         "files": [
