--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "buckaroo/magento2",
     "description": "Buckaroo Magento 2 extension",
     "require": {
-        "php": "~5.6.0|~7.0.0|~7.1.0|~7.2.0|~7.3.0",
+        "php": "~7.1.0|~7.2.0|~7.3.0",
         "magento/module-payment": "100.1.*|100.2.*|100.3.*",
         "magento/framework": ">=100.1.0,<=100.1.18|>=101.0.0,<=101.0.10|>=102.0.0,<=102.0.3|102.0.2-p2"
     },
