--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "require": {
         "php": "~7.1.0|~7.2.0|~7.3.0",
         "magento/module-payment": "100.1.*|100.2.*|100.3.*",
-        "magento/framework": ">=100.1.0,<=100.1.18|>=101.0.0,<=101.0.10|>=102.0.0,<=102.0.3|102.0.2-p2"
+        "magento/framework": ">=100.1.0,<=100.1.18|>=101.0.0,<=101.0.10|>=102.0.0,<=102.0.4|102.0.2-p2"
     },
     "type": "magento2-module",
     "license": "CC-BY-NC-ND-3.0",
@@ -22,8 +22,8 @@
         "docs": "https://support.buckaroo.nl"
     },
     "homepage": "https://www.buckaroo.nl",
-    "version" : "v1.16.0",
-    "minimum-stability": "stable",
+    "version" : "v1.16.1-RC1",
+    "minimum-stability": "RC",
     "autoload": {
         "files": [
             "registration.php"
