--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "require": {
         "php": "~7.1.0|~7.2.0|~7.3.0|~7.4.0",
         "magento/module-payment": "100.1.*|100.2.*|100.3.*|100.4.*",
-        "magento/framework": ">=100.1.0,<=100.1.18|>=101.0.0,<=101.0.11|>=102.0.0,<=102.0.5-p2|102.0.2-p2|>=103.0.0"
+        "magento/framework": ">=100.1.0,<=100.1.18|>=101.0.0,<=101.0.11|>=102.0.0,<=102.0.6|102.0.2-p2|>=103.0.0"
     },
     "type": "magento2-module",
     "license": "CC-BY-NC-ND-3.0",
