--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,9 @@
     "name": "buckaroo/magento2",
     "description": "Buckaroo Magento 2 extension",
     "require": {
-        "php": "~7.1.0|~7.2.0|~7.3.0|~7.4.0",
-        "magento/module-payment": "100.1.*|100.2.*|100.3.*|100.4.*",
-        "magento/framework": ">=100.1.0,<=100.1.18|>=101.0.0,<=101.0.11|>=102.0.0,<=102.0.6|102.0.6-p1|>=103.0.0"
+        "php": "~7.3.0|~7.4.0",
+        "magento/module-payment": "100.3.*|100.4.*",
+        "magento/framework": ">=102.0.0|>=103.0.0"
     },
     "type": "magento2-module",
     "license": "CC-BY-NC-ND-3.0",
@@ -22,7 +22,7 @@
         "docs": "https://support.buckaroo.nl"
     },
     "homepage": "https://www.buckaroo.nl",
-    "version" : "v1.33.0",
+    "version" : "v1.34.0",
     "minimum-stability": "stable",
     "autoload": {
         "files": [
