--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,12 +16,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: validate composer json
         run: composer validate
-      - name: PHPUnit tests
-        uses: php-actions/phpunit@v2
-        with:
-          configuration: dev/tests/unit/phpunit.xml.dist
-          memory_limit: 768M
-          args: --coverage-text
+      - name: PHPUnit
+        run: |
+          composer require phpunit/phpunit
+          ./vendor/bin/phpunit --version
       - name: get phpcs
         run: |
           curl -OL https://squizlabs.github.io/PHP_CodeSniffer/phpcs.phar
