--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
         run: composer validate
       - name: PHPUnit
         run: |
+          echo '{"http-basic": {"repo.magento.com": {"username": "${{ secrets.REPO_USERNAME }}","password": "${{ secrets.REPO_PASS }}"}}}' > auth.json
           composer create-project --repository-url=https://repo.magento.com/ magento/project-community-edition=2.3.6 m23
           mkdir -p m23/app/code/Buckaroo/Magento2/
           rsync -r --exclude='m23' ./ m23/app/code/Buckaroo/Magento2/
