--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     },
     "require-dev": {
         "satooshi/php-coveralls": "^1.0",
-        "facebook/webdriver": "^1.1"
+        "php-webdriver/webdriver": "^1.1"
     },
     "repositories": {
         "magento": {
