--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,7 @@ jobs:
           rsync -r --exclude='m23' ./ m23/app/code/Buckaroo/Magento2/
           cd m23
           vendor/phpunit/phpunit/phpunit --filter="Block" -c dev/tests/unit/phpunit.xml.dist app/code/Buckaroo/Magento2
-      - name: get phpcs
-        run: |
-          curl -OL https://squizlabs.github.io/PHP_CodeSniffer/phpcs.phar
-          php phpcs.phar --version
       - name: magento coding standard
         run: |
-          composer create-project magento/magento-coding-standard --stability=stable magento-coding-standard
-          ./magento-coding-standard/vendor/bin/phpcs --standard=Magento2 . --ignore=magento-coding-standard/*
+          cd m23
+          ./vendor/bin/phpcs --standard=Magento2  app/code/Buckaroo/Magento2/
