BP-700 run all tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
           mkdir -p m23/app/code/Buckaroo/Magento2/
           rsync -r --exclude='m23' ./ m23/app/code/Buckaroo/Magento2/
           cd m23
-          vendor/phpunit/phpunit/phpunit --filter="Block" -c dev/tests/unit/phpunit.xml.dist app/code/Buckaroo/Magento2
+          vendor/phpunit/phpunit/phpunit -c dev/tests/unit/phpunit.xml.dist app/code/Buckaroo/Magento2
