--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,11 @@ jobs:
           mkdir -p m23/app/code/Buckaroo/Magento2/
           rsync -r --exclude='m23' ./ m23/app/code/Buckaroo/Magento2/
           cd m23
+          pull_number=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
+          url=" https://api.github.com/repos/buckaroo-it/Magento2/$pull_number/files"
+          echo $url
+          curl -H $url > files_changed
+          cat files_changed | grep '"filename"' | sed 's/\"filename\"\: \"//' | sed 's/\",//' | xargs phpcs --standard=Magento2          
           bin/magento module:enable --all
           bin/magento setup:di:compile
           vendor/phpunit/phpunit/phpunit -c dev/tests/unit/phpunit.xml.dist app/code/Buckaroo/Magento2
