--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,13 @@ jobs:
           url="https://api.github.com/repos/buckaroo-it/Magento2/pulls/$pull_number/files"
           echo $url
           curl $url > files_changed
-          cat files_changed | grep '"filename"' | sed 's/\"filename\"\: \"//' | sed 's/\",//' | xargs ls                    
+          cat files_changed | grep '"filename"' | sed 's/\"filename\"\: \"//' | sed 's/\",//' | xargs ls
+          echo '{"http-basic": {"repo.magento.com": {"username": "${{ secrets.REPO_USERNAME }}","password": "${{ secrets.REPO_PASS }}"}}}' > auth.json
+          composer create-project --repository-url=https://repo.magento.com/ magento/project-community-edition=2.3.7 m23
+          mkdir -p m23/app/code/Buckaroo/Magento2/
+          rsync -r --exclude='m23' ./ m23/app/code/Buckaroo/Magento2/          
+          cd m23                    
+          cat ../files_changed | grep '"filename"' | sed 's/\"filename\"\: \"//' | sed 's/\",//' | xargs ./vendor/bin/phpcs --standard=Magento2          
+          bin/magento module:enable --all
+          bin/magento setup:di:compile
+          vendor/phpunit/phpunit/phpunit -c dev/tests/unit/phpunit.xml.dist app/code/Buckaroo/Magento2          
