Added composer script to override the soap file based on php version

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,11 @@
             "Buckaroo\\Magento2\\": ""
         }
     },
+    "scripts": {
+        "post-update-cmd": [
+          "php composer-scripts\\run.php"
+        ]
+    },
     "require-dev": {
         "satooshi/php-coveralls": "^1.0",
         "php-webdriver/webdriver": "^1.1"
