--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
     "require": {
         "php": "~7.4.0||~8.1.0",
         "magento/module-payment": "100.3.*|100.4.*",
-        "magento/framework": ">=102.0.0|>=103.0.0",
-        "buckaroo/sdk": "^1.0"
+        "magento/framework": ">=102.0.0|>=103.0.0"
     },
     "type": "magento2-module",
     "license": "CC-BY-NC-ND-3.0",
