--- a/.github/workflows/coding-standard.yml
+++ b/.github/workflows/coding-standard.yml
@@ -27,6 +27,6 @@ jobs:
     continue-on-error: true
     steps:
       - uses: actions/checkout@v2
-      - uses: extdn/github-actions-m2/magento-phpstan@master
+      - uses: extdn/github-actions-m2/magento-phpstan/8.1@master
         with:
           composer_name: buckaroo/magento2
