--- a/.github/workflows/coding-standard.yml
+++ b/.github/workflows/coding-standard.yml
@@ -28,3 +28,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: extdn/github-actions-m2/magento-phpstan/8.1@master
+        with:
+          composer_name: buckaroo/magento2
+          module_source: app/code/Buckaroo/Magento2
