--- a/.github/workflows/coding-standard.yml
+++ b/.github/workflows/coding-standard.yml
@@ -26,8 +26,13 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     steps:
-      - uses: actions/checkout@v2
-      - uses: extdn/github-actions-m2/magento-phpstan/8.1@master
+      - uses: actions/checkout@v3
+      - uses: php-actions/composer@v6 # or alternative dependency management
+      - uses: php-actions/phpstan@v3
         with:
-          composer_name: buckaroo/magento2
-          module_source: app/code/Buckaroo/Magento2
+          path: Api/
+                Block/
+                Controller/
+                Cron/
+          configuration: phpstan.neon
+          level: 1
