--- a/phpstan.neon
+++ b/phpstan.neon
@@ -36,7 +36,7 @@ parameters:
         - '#Constant TESTS_MODULES_PATH not found.#'
         - '#Constant TESTS_INSTALLATION_DB_CONFIG_FILE not found.#'
         - '#Constant T_[A-Z_]+ not found.#'
-        - '#but return statement is missing.#'
+        - '#but return statement is missing#'
 
 
 services:
