--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "php": "^8.0",
         "magento/module-payment": "100.3.*|100.4.*",
         "magento/framework": ">=102.0.0|>=103.0.0",
-        "buckaroo/sdk": "^1.0"
+        "buckaroo/sdk": ">=1.7.1"
     },
     "type": "magento2-module",
     "license": "CC-BY-NC-ND-3.0",
