--- a/.github/workflows/icons.yml
+++ b/.github/workflows/icons.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Copy payment method icons
         run: |
             cd Media
+            rm -f ideal-qr.svg knaken.svg paylink.svg paybybank.svg
             cp -R "Payment methods/SVG/." ${{ github.workspace }}/view/adminhtml/web/images/svg/
             cp -R "Payment methods/SVG/." ${{ github.workspace }}/view/frontend/web/images/svg/
       - name: Copy creditcards icons
@@ -32,8 +33,10 @@ jobs:
       - name: Copy giftcards icons
         run: |
             cd Media
+            rm -f vvvlekkerweg.svg vvvshopchill.svg
             cp -R "Giftcards/SVG/." ${{ github.workspace }}/view/adminhtml/web/images/giftcards/
             cp -R "Giftcards/SVG/." ${{ github.workspace }}/view/frontend/web/images/giftcards/
+            
       - name: Copy payment issuers icons
         run: |
             cd Media
