--- a/.github/workflows/icons.yml
+++ b/.github/workflows/icons.yml
@@ -21,9 +21,9 @@ jobs:
             php  ./rename-icons.php
       - name: Copy payment method icons
         run: |
-            cd "../Media/Payment methods/SVG/"
+            cd "${{ github.workspace }}/Media/Payment methods/SVG/"
             rm -f ideal-qr.svg knaken.svg paylink.svg paybybank.svg
-            cd Media
+            cd ${{ github.workspace }}/Media
             cp -R "Payment methods/SVG/." ${{ github.workspace }}/view/adminhtml/web/images/svg/
             cp -R "Payment methods/SVG/." ${{ github.workspace }}/view/frontend/web/images/svg/
       - name: Copy creditcards icons
@@ -33,9 +33,9 @@ jobs:
             cp -R "Creditcard issuers/SVG/." ${{ github.workspace }}/view/frontend/web/images/creditcards/
       - name: Copy giftcards icons
         run: |
-            cd "../Media/Giftcards/SVG/"
+            cd "${{ github.workspace }}/Media/Giftcards/SVG/"
             rm -f vvvlekkerweg.svg vvvshopchill.svg
-            cd Media
+            cd ${{ github.workspace }}/Media
             cp -R "Giftcards/SVG/." ${{ github.workspace }}/view/adminhtml/web/images/giftcards/
             cp -R "Giftcards/SVG/." ${{ github.workspace }}/view/frontend/web/images/giftcards/
             
