BP-2878 Add iDEAL issuer N26 (#783)
* BP-2878 Add iDEAL issuer N26

* Apply logo changes from media repository

* clean svgs from media file

* fix svg 2

* fix pipe

* fix pipe2

* fix pipe3

---------

Co-authored-by: Ivascu Madalin <madalin.ivascu@arnia.ro>
Co-authored-by: harli91 <harli91@users.noreply.github.com>

--- a/.github/workflows/icons.yml
+++ b/.github/workflows/icons.yml
@@ -21,7 +21,9 @@ jobs:
             php  ./rename-icons.php
       - name: Copy payment method icons
         run: |
-            cd Media
+            cd "${{ github.workspace }}/Media/Payment methods/SVG/"
+            rm -f ideal-qr.svg knaken.svg paylink.svg paybybank.svg
+            cd ${{ github.workspace }}/Media
             cp -R "Payment methods/SVG/." ${{ github.workspace }}/view/adminhtml/web/images/svg/
             cp -R "Payment methods/SVG/." ${{ github.workspace }}/view/frontend/web/images/svg/
       - name: Copy creditcards icons
@@ -31,9 +33,12 @@ jobs:
             cp -R "Creditcard issuers/SVG/." ${{ github.workspace }}/view/frontend/web/images/creditcards/
       - name: Copy giftcards icons
         run: |
-            cd Media
+            cd "${{ github.workspace }}/Media/Giftcards/SVG/"
+            rm -f vvvlekkerweg.svg vvvshopchill.svg
+            cd ${{ github.workspace }}/Media
             cp -R "Giftcards/SVG/." ${{ github.workspace }}/view/adminhtml/web/images/giftcards/
             cp -R "Giftcards/SVG/." ${{ github.workspace }}/view/frontend/web/images/giftcards/
+            
       - name: Copy payment issuers icons
         run: |
             cd Media
