--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "email": "support@buckaroo.nl",
         "issues": "https://support.buckaroo.nl/contact",
         "wiki": "https://support.buckaroo.nl",
-        "docs": "https://docs.buckaroo.io/"
+        "docs": "https://support.buckaroo.nl"
     },
     "homepage": "https://www.buckaroo.nl",
     "version" : "v1.46.0",
