--- a/.github/workflows/coding-standard.yml
+++ b/.github/workflows/coding-standard.yml
@@ -31,17 +31,15 @@ jobs:
         with:
           php-version: 8.1
           tools: composer:v2
+
       - uses: actions/checkout@v3
+
       - name: Validate composer json
         run: composer validate
-      - name: Cache Composer packages
-        id: composer-cache
-        uses: actions/cache@v2
-        with:
-          path: ${{ github.workspace }}/${{ env.namespace }}-source/vendor
-          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-php-
+
+      - name: Clear Composer cache
+        run: composer clear-cache
+
       - name: Setup Magento
         run: |
           pull_number=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
@@ -50,11 +48,12 @@ jobs:
           curl $url > files_changed
           cat files_changed | grep '"filename"' | sed 's/\"filename\"\: \"//' | sed 's/\",//' | xargs ls
           echo '{"http-basic": {"repo.magento.com": {"username": "${{ secrets.REPO_USERNAME }}","password": "${{ secrets.REPO_PASS }}"}}}' > auth.json
-          composer create-project --repository-url=https://repo.magento.com/ magento/product-community-edition=2.4.6-p2 m246
-          mkdir -p m246/app/code/Buckaroo/Magento2/
-          rsync -r --exclude='m246' ./ m246/app/code/Buckaroo/Magento2/
-          cd m246
+          composer create-project --repository-url=https://repo.magento.com/ magento/product-community-edition=2.4.6-p2 ~/m246
+          mkdir -p ~/m246/app/code/Buckaroo/Magento2/
+          rsync -r --exclude='m246' ./ ~/m246/app/code/Buckaroo/Magento2/
+          cd ~/m246
           bin/magento module:enable --all
           bin/magento setup:di:compile
+
       - name: Run PHPStan
         run: vendor/bin/phpstan analyse --level 1 app/code/Buckaroo/Magento2/ -c dev/tests/static/testsuite/Magento/Test/Php/_files/phpstan/phpstan.neon
