--- a/.github/workflows/sonarqube_pr_analysis.yml
+++ b/.github/workflows/sonarqube_pr_analysis.yml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - main
+      - master
       - feature/payment_provider_gateway
       - develop
       - 'releases/**'
