--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
 # Unique key for the project
-sonar.projectKey=buckaroo:magento2
+sonar.projectKey=buckaroo:magento2:refactor
 
 # Display name and version for the SonarQube UI
-sonar.projectName=Buckaroo Magento 2
+sonar.projectName=Magento 2 Refactor
 sonar.projectVersion=1.0
 
 # Path to the source code, relative to the sonar-project.properties file
