--- a/.github/workflows/sonarqube_pr_analysis.yml
+++ b/.github/workflows/sonarqube_pr_analysis.yml
@@ -2,6 +2,7 @@ on:
   push:
     branches:
       - feature/payment_provider_gateway
+      - sonarqube-refactor-fixes
   pull_request:
     types: [opened, synchronize, reopened]
 
