--- a/.github/workflows/icons.yml
+++ b/.github/workflows/icons.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Copy payment method icons
         run: |
             cd "${{ github.workspace }}/Media/Payment methods/SVG/"
-            rm -f ideal-qr.svg knaken.svg paylink.svg paybybank.svg pos-nfc.svg riverty.svg
+            rm -f ideal-qr.svg paybybank.svg pos-nfc.svg riverty.svg
             cd ${{ github.workspace }}/Media
             cp -R "Payment methods/SVG/." ${{ github.workspace }}/view/base/web/images/svg/
       - name: Copy creditcards icons
@@ -35,11 +35,15 @@ jobs:
             rm -f vvvlekkerweg.svg vvvshopchill.svg
             cd ${{ github.workspace }}/Media
             cp -R "Giftcards/SVG/." ${{ github.workspace }}/view/base/web/images/giftcards/
-            
       - name: Copy payment issuers icons
         run: |
             cd Media
             cp -R "iDEAL bank issuers/SVG/." ${{ github.workspace }}/view/base/web/images/ideal/
+      - name: Copy Identification methods icons
+        run: |
+          cd "${{ github.workspace }}/Media/Identification methods/SVG/"
+          rm -f pim.svg
+          cp -R ./. ${{ github.workspace }}/view/base/web/images/
       - name: Cleanup
         run: |
             rm -rd Media
