--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,28 @@
     "require": {
         "php": "~7.4.0||~8.1.0||~8.2.0",
         "magento/module-payment": "100.3.*|100.4.*",
-        "magento/framework": ">=102.0.0|>=103.0.0"
+        "magento/framework": ">=102.0.0|>=103.0.0",
+        "magento/module-backend": "^102.0",
+        "magento/module-catalog": "^104.0",
+        "magento/module-checkout": "^100.4",
+        "magento/module-config": "^101.2",
+        "magento/module-customer": "^103.0",
+        "magento/module-developer": "^100.4",
+        "magento/module-directory": "^100.4",
+        "magento/module-eav": "^102.1",
+        "magento/module-email": "^101.1",
+        "magento/module-media-storage": "^100.4",
+        "magento/module-quote": "^101.2",
+        "magento/module-sales-rule": "^101.2",
+        "magento/module-sales": "^103.0",
+        "magento/module-store": "^101.1",
+        "magento/module-tax": "^100.4",
+        "magento/module-ui": "^101.2",
+        "monolog/monolog": "^2.9",
+        "phpunit/phpunit": "^9.5",
+        "psr/log": "^1.1",
+        "ext-json": "*",
+        "ext-pcre": "*"
     },
     "type": "magento2-module",
     "license": "CC-BY-NC-ND-3.0",
