BP-3451 - Missing dependency - refactor

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,26 @@
         "php": "^8.0",
         "magento/module-payment": "100.3.*|100.4.*",
         "magento/framework": ">=102.0.0|>=103.0.0",
-        "buckaroo/sdk": ">=1.7.1"
+        "magento/module-backend": "^102.0",
+        "magento/module-catalog": "^104.0",
+        "magento/module-checkout": "^100.4",
+        "magento/module-config": "^101.2",
+        "magento/module-customer": "^103.0",
+        "magento/module-directory": "^100.4",
+        "magento/module-eav": "^102.1",
+        "magento/module-media-storage": "^100.4",
+        "magento/module-quote": "^101.2",
+        "magento/module-sales-rule": "^101.2",
+        "magento/module-sales": "^103.0",
+        "magento/module-store": "^101.1",
+        "magento/module-tax": "^100.4",
+        "magento/module-ui": "^101.2",
+        "buckaroo/sdk": "^1.11",
+        "monolog/monolog": "^2.9",
+        "phpunit/phpunit": "^9.5",
+        "psr/log": "^1.1",
+        "ext-json": "*",
+        "ext-pcre": "*"
     },
     "type": "magento2-module",
     "license": "CC-BY-NC-ND-3.0",
