--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "buckaroo/magento2",
     "description": "Buckaroo Magento 2 extension",
     "require": {
-        "php": "~7.4.0||~8.1.0||~8.2.0",
+        "php": "~7.4.0||~8.1.0||~8.2.0||~8.3.0",
         "magento/module-payment": "100.3.*|100.4.*",
         "magento/framework": ">=102.0.0|>=103.0.0"
     },
