--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "magento/module-payment": ">=100.3.3",
         "magento/framework": ">=103.0.0",
         "buckaroo/sdk": "^1.18.0",
-        "monolog/monolog": "^2.9",
+        "monolog/monolog": "^2.9 || ^3.0",
         "phpunit/phpunit": "^9.5",
         "psr/log": "^2.0 || ^3.0",
         "ext-json": "*",
