--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -7,8 +7,24 @@ on:
 
 jobs:
   integration-tests:
-    name: Magento 2 Integration Tests
+    name: Integration Tests - PHP ${{ matrix.php }} / Magento ${{ matrix.magento }}
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - php: '8.1'
+            magento: '2.4.6'
+          - php: '8.2'
+            magento: '2.4.6'
+          - php: '8.2'
+            magento: '2.4.7'
+          - php: '8.3'
+            magento: '2.4.7'
+          - php: '8.3'
+            magento: '2.4.8'
+          - php: '8.4'
+            magento: '2.4.8'
     services:
       mysql:
         image: mysql:5.7
@@ -28,9 +44,9 @@ jobs:
         options: --health-cmd="curl localhost:9200/_cluster/health?wait_for_status=yellow&timeout=60s" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
       - uses: actions/checkout@v3
-      - name: M2 Integration Tests with Magento 2 (Php 8.1)
-        uses: extdn/github-actions-m2/magento-integration-tests/8.1@master
+      - name: M2 Integration Tests with Magento ${{ matrix.magento }} (PHP ${{ matrix.php }})
+        uses: extdn/github-actions-m2/magento-integration-tests/${{ matrix.php }}@master
         with:
           module_name: Buckaroo_Magento2
           composer_name: buckaroo/magento2
-          ce_version: '2.4.8'
+          ce_version: ${{ matrix.magento }}
