--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "buckaroo/magento2",
     "description": "Buckaroo Magento 2 extension",
     "require": {
-        "php": "^8.0",
+        "php": "^8.0 || ^8.1 || ^8.2 || ^8.3 || ^8.4",
         "magento/module-payment": ">=100.3.3",
         "magento/framework": ">=103.0.0",
         "buckaroo/sdk": "^1.18.0",
