update: format code and improve consistency across multiple files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 Build
 .DS_Store
 .idea/
+vendor/
+# Local testing files (keep for development only)
+run-local-tests.sh
+TESTING.md
+phpstan-local.neon
+composer.lock
