--- a/.github/workflows/coding-standard.yml
+++ b/.github/workflows/coding-standard.yml
@@ -4,12 +4,53 @@ on:
   push:
   pull_request:
 
+# Prevent duplicate runs: cancel in-progress runs for the same PR/branch
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 jobs:
+  # Job to check if we should run based on the event type and PR status
+  check-conditions:
+    runs-on: ubuntu-latest
+    outputs:
+      should-run: ${{ steps.decide.outputs.should-run }}
+      reason: ${{ steps.decide.outputs.reason }}
+    steps:
+      - name: Decide if checks should run
+        id: decide
+        run: |
+          if [ "${{ github.event_name }}" == "pull_request" ]; then
+            echo "should-run=true" >> $GITHUB_OUTPUT
+            echo "reason=Running because this is a Pull Request event" >> $GITHUB_OUTPUT
+          elif [ "${{ github.event_name }}" == "push" ]; then
+            branch_name="${{ github.ref_name }}"
+            pr_response=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+              "https://api.github.com/repos/${{ github.repository }}/pulls?head=${{ github.repository_owner }}:$branch_name&state=open")
+            pr_count=$(echo "$pr_response" | jq length)
+            
+            if [ "$pr_count" -eq 0 ]; then
+              echo "should-run=true" >> $GITHUB_OUTPUT
+              echo "reason=Running because push to branch with no open PR" >> $GITHUB_OUTPUT
+            else
+              echo "should-run=false" >> $GITHUB_OUTPUT
+              echo "reason=Skipping because open PR exists (checks will run on PR)" >> $GITHUB_OUTPUT
+            fi
+          else
+            echo "should-run=true" >> $GITHUB_OUTPUT
+            echo "reason=Running for workflow_dispatch or other event" >> $GITHUB_OUTPUT
+          fi
+
   phpcs:
     name: M2 Code Analysis
     runs-on: ubuntu-latest
+    needs: check-conditions
+    if: needs.check-conditions.outputs.should-run == 'true'
     continue-on-error: true
     steps:
+      - name: Show execution reason
+        run: |
+          echo "✅ Running PHPCS: ${{ needs.check-conditions.outputs.reason }}"
       - uses: actions/checkout@v3
       - uses: extdn/github-actions-m2/magento-coding-standard/8.3@master
         with:
@@ -19,14 +60,21 @@ jobs:
   phpmd:
     name: M2 Mess Detection
     runs-on: ubuntu-latest
+    needs: check-conditions
+    if: needs.check-conditions.outputs.should-run == 'true'
     continue-on-error: true
     steps:
+      - name: Show execution reason
+        run: |
+          echo "✅ Running PHPMD: ${{ needs.check-conditions.outputs.reason }}"
       - uses: actions/checkout@v3
       - uses: extdn/github-actions-m2/magento-mess-detector@master
 
   phpstan:
     name: M2 PHPStan
     runs-on: ubuntu-latest
+    needs: check-conditions
+    if: needs.check-conditions.outputs.should-run == 'true'
     continue-on-error: true
     steps:
       # ───────────────────────────────────────────────────────────────
