update: integrate Second Chance functionality into the main Buckaroo module, including new API, repository, and cron jobs

--- a/composer.json
+++ b/composer.json
@@ -56,5 +56,8 @@
             "magento/composer-dependency-version-audit-plugin": true,
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
+    },
+    "conflict": {
+        "buckaroo/magento2secondchance": "*"
     }
 }
