--- a/phpstan.neon
+++ b/phpstan.neon
@@ -37,6 +37,13 @@ parameters:
         - '#Constant TESTS_INSTALLATION_DB_CONFIG_FILE not found.#'
         - '#Constant T_[A-Z_]+ not found.#'
         - '#but return statement is missing#'
+        # Ignore Adobe Commerce classes that may not exist in Magento Open Source
+        - '#Class Magento\\GiftCardAccount\\Api\\GiftCardAccountRepositoryInterface not found#'
+        - '#Class Magento\\GiftCardAccount\\Model\\HistoryFactory not found#'
+        - '#Access to constant ACTION_CREATED on an unknown class Buckaroo\\Magento2\\Model\\Service\\History#'
+        # Ignore all Adobe Commerce gift card related classes in our service
+        - '#.*GiftCardRefundService\.php.*Class Magento\\GiftCardAccount\\.*not found#'
+        - '#.*Magento\\GiftCardAccount\\.*not found.*#'
 
 
 services:
