update: modify composer.json to replace and suggest buckaroo/magento2secondchance package

--- a/composer.json
+++ b/composer.json
@@ -59,5 +59,11 @@
     },
     "conflict": {
         "buckaroo/magento2secondchance": "*"
+    },
+    "replace": {
+        "buckaroo/magento2secondchance": "*"
+    },
+    "suggest": {
+        "buckaroo/magento2secondchance": "No longer needed – remove it"
     }
 }
