--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,24 @@
         "php": "^8.0 || ^8.1 || ^8.2 || ^8.3 || ^8.4",
         "magento/module-payment": ">=100.3.3",
         "magento/framework": ">=103.0.0",
+        "magento/module-backend": "^102.0",
+        "magento/module-catalog": "^104.0",
+        "magento/module-catalog-inventory": "^100.4",
+        "magento/module-checkout": "^100.4",
+        "magento/module-config": "^101.2",
+        "magento/module-configurable-product": "^100.4",
+        "magento/module-customer": "^103.0",
+        "magento/module-directory": "^100.4",
+        "magento/module-eav": "^102.1",
+        "magento/module-email": "^101.1",
+        "magento/module-media-storage": "^100.4",
+        "magento/module-quote": "^101.2",
+        "magento/module-sales": "^103.0",
+        "magento/module-sales-rule": "^101.2",
+        "magento/module-store": "^101.1",
+        "magento/module-tax": "^100.4",
+        "magento/module-ui": "^101.2",
+        "laminas/laminas-validator": "^2.64",
         "buckaroo/sdk": "^1.19.0",
         "monolog/monolog": "^2.9 || ^3.0",
         "phpunit/phpunit": "^9.5 || ^10.5",
