--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -142,9 +142,10 @@ jobs:
           if [ -s files_changed.txt ]; then
             echo "Running PHPCS on changed files..."
             while IFS= read -r file; do
-              if [ -f "$file" ]; then
+              full_path="m2-${{ matrix.magento }}/app/code/Buckaroo/Magento2/$file"
+              if [ -f "$full_path" ]; then
                 echo "Checking file: $file"
-                ./m2-${{ matrix.magento }}/vendor/bin/phpcs --standard=Magento2 "$file" || true
+                ./m2-${{ matrix.magento }}/vendor/bin/phpcs --standard=Magento2 --exclude=Magento2.Legacy.ObsoleteSystemConfiguration "$full_path" || true
               fi
             done < files_changed.txt
           else
